Updating source texts according to fixes on en_US catalog

--- a/po/sympa/fr.po
+++ b/po/sympa/fr.po
@@ -4201,6 +4201,10 @@ msgstr "Active ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "ID SRV utilisé pour Authentication-Results dans les sceaux ARC"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "ID SRV utilisé pour Authentication-Results dans les sceaux ARC"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Typiquement, le domaine du serveur de messagerie"
