--- a/po/sympa/gl.po
+++ b/po/sympa/gl.po
@@ -4003,6 +4003,10 @@ msgstr "Habilitar ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "ID de SRV dos Authentication-Results usado no selo ARC"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "ID de SRV dos Authentication-Results usado no selo ARC"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Normalmente o dominio do servidor de correo"
