--- a/po/sympa/de.po
+++ b/po/sympa/de.po
@@ -4033,6 +4033,10 @@ msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr ""
 "SRV-ID für Authentifizierungsergebnisse, die in ARC-Siegel verwendet werden."
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "SRV-ID für Authentifizierungsergebnisse, die in ARC-Siegel verwendet werden."
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Typischerweise die Domäne des Mail-Servers"
