--- a/po/sympa/en_US.po
+++ b/po/sympa/en_US.po
@@ -3943,6 +3943,10 @@ msgstr ""
 "Authentication service identifier (authserv-id) for Authentication-Results "
 "used in ARC seal"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr ""
