--- a/po/sympa/es.po
+++ b/po/sympa/es.po
@@ -4036,6 +4036,10 @@ msgstr "Habilitar ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "ID de SRV de los Authentication-Results usados en el sello ARC"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "ID de SRV de los Authentication-Results usados en el sello ARC"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Normalmente el dominio del servidor de correo"
