--- a/po/sympa/it.po
+++ b/po/sympa/it.po
@@ -4216,6 +4216,10 @@ msgstr "Abilita ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "SRV ID per i risultati dell'autenticazione usati nel sigillo ARC"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "SRV ID per i risultati dell'autenticazione usati nel sigillo ARC"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Tipicamente il dominio del server mail"
