--- a/po/sympa/ru.po
+++ b/po/sympa/ru.po
@@ -4015,6 +4015,10 @@ msgstr "Включить ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "SRV ID для Authentication-Results, используется в печати ARC"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "SRV ID для Authentication-Results, используется в печати ARC"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Обычно домен почтового сервера."
