--- a/po/sympa/sv.po
+++ b/po/sympa/sv.po
@@ -3972,6 +3972,10 @@ msgstr "Starta ARC"
 msgid "SRV ID for Authentication-Results used in ARC seal"
 msgstr "SRV ID för Authenticierings-Resultat använt i ARC-lås"
 
+#: src/lib/Sympa/Config/Schema.pm:4578
+msgid "Authentication service identifier (authserv-id) for Authentication-Results used in ARC seal"
+msgstr "SRV ID för Authenticierings-Resultat använt i ARC-lås"
+
 #: src/lib/Sympa/Config/Schema.pm:4579
 msgid "Typically the domain of the mail server"
 msgstr "Typiskt domänen för mailservern"
